# colcon-systemd

./: .gitignore  ARCHITECTURE.md  DESIGN.md  README.md  pyproject.toml
.github/workflows/: ci.yml  copilot-setup-steps.yml  release.yml
colcon_systemd/: __init__.py  config.py  event_handler.py  render.py
examples/my_node/: colcon-systemd.yaml  package.xml  setup.py
examples/my_node/my_node/: main.py
test_packages/my_rclpy_node/: colcon-systemd.yaml  package.xml  setup.cfg  setup.py
test_packages/my_rclpy_node/my_rclpy_node/: my_node.py
test_packages/simple_node/: colcon-systemd.yaml  package.xml  setup.py
test_packages/simple_node/simple_node/: main.py
tests/: test_colcon_build_e2e.py  test_colcon_build_e2e.sh  test_config.py  test_end_to_end.py  test_event_handler.py  test_example_build.py  test_example_build.sh  test_render.py
