[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "colcon-systemd"
version = "0.2.0"
description = "Colcon plugin that generates systemd service units for opted-in packages during colcon build"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.8"
authors = [
    {name = "CraigBuilds"},
]
dependencies = [
    "colcon-core>=0.12.0",
    "PyYAML>=5.0",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Build Tools",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-cov",
]

[project.entry-points.'colcon_core.event_handler']
systemd = "colcon_systemd.event_handler:SystemdEventHandler"

[tool.setuptools.packages.find]
include = ["colcon_systemd*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
